Fixing issues with font not loading on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ body{
   font-family: 'Lexend Deca','sans-serif';
   width: 100%;
   margin: 0 auto;
+  @font-face {
+    font-family: 'Lexend Deca', sans-serif;
+    src: url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+  }
 }
 
 a{
